--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,11 @@ package:
 source:
   url: https://github.com/drycpp/{{ name }}/releases/download/{{ version }}/{{ name }}-{{ version }}.tar.bz2
   sha256: 8121cc0a3f856584c5ce79638614468e2aba617d0338d14871f4ec7acbee2bec
+  patches:
+    - 0001-Remove-checks-for-compiler-supporting-C-11.patch
 
 build:
-  number: 1
+  number: 2
 
 requirements:
   build:
