--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,15 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    
+    - {{ stdlib("c") }}
+
 test:
   commands:
     - test -e ${PREFIX}/include/lmdb++.h  # [unix]
     - if not exist %LIBRARY_PREFIX%\include\lmdb++.h (exit 1)  # [win]
 
 about:
-  home: https://github.com/drycpp/lmdbxx  
+  home: https://github.com/drycpp/lmdbxx
   summary: This is a comprehensive C++ wrapper for the LMDB embedded database library,
   description: This is a comprehensive C++ wrapper for the LMDB embedded database library, offering both an error-checked procedural interface and an object-oriented resource interface with RAII semantics.
 
@@ -33,6 +34,6 @@ about:
   license_file: UNLICENSE
 
 extra:
-  recipe-maintainers: 
+  recipe-maintainers:
     - DerThorsten
     - jjerphan
