--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,21 +8,24 @@ package:
 source:
   url: https://github.com/drycpp/{{ name }}/releases/download/{{ version }}/{{ name }}-{{ version }}.tar.bz2
   sha256: 8121cc0a3f856584c5ce79638614468e2aba617d0338d14871f4ec7acbee2bec
+  patches:
+    - 0001-Remove-checks-for-compiler-supporting-C-11.patch
 
 build:
-  number: 1
+  number: 2
 
 requirements:
   build:
     - {{ compiler('cxx') }}
-    
+    - {{ stdlib("c") }}
+
 test:
   commands:
     - test -e ${PREFIX}/include/lmdb++.h  # [unix]
     - if not exist %LIBRARY_PREFIX%\include\lmdb++.h (exit 1)  # [win]
 
 about:
-  home: https://github.com/drycpp/lmdbxx  
+  home: https://github.com/drycpp/lmdbxx
   summary: This is a comprehensive C++ wrapper for the LMDB embedded database library,
   description: This is a comprehensive C++ wrapper for the LMDB embedded database library, offering both an error-checked procedural interface and an object-oriented resource interface with RAII semantics.
 
@@ -31,6 +34,6 @@ about:
   license_file: UNLICENSE
 
 extra:
-  recipe-maintainers: 
+  recipe-maintainers:
     - DerThorsten
     - jjerphan
